minor styling fixes for scrollbar and ticket view

--- a/src/components/TicketingDashboard/TicketColumns/Column/TicketView/TicketView.module.scss
+++ b/src/components/TicketingDashboard/TicketColumns/Column/TicketView/TicketView.module.scss
@@ -18,11 +18,12 @@ $white: #fcfcfb;
   left: 0;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  min-height: 100vh; /* Full height */
+  height: 200vh; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   backdrop-filter: blur(10px);
   background-color: $primary-black-transparent;
-  padding-top: 50px;
+  padding-top: 6%;
   text-align: center;
 
   .TicketView {
@@ -35,8 +36,7 @@ $white: #fcfcfb;
     justify-content: center;
     width: 100%;
     max-width: 700px;
-    min-height: 60vh;
-    max-height: 70vh;
+    height: max-content;
     margin: auto;
     // @media screen and (min-width: 900px) {
     //   width: 900px;
@@ -47,19 +47,23 @@ $white: #fcfcfb;
       padding: $base-padding/2 $base-padding $base-padding/2 $base-padding;
       margin: 0;
       display: flex;
+      padding: 2%;
+      min-height: 150px;
       justify-content: space-between;
       align-items: center;
-      height: 15%;
+      height: max-content;
 
       .ticketHeader {
-        justify-content: space-around;
-        padding: 5px;
+        justify-content: space-between;
+        align-items: center;
+        height: max-content;
       }
       .ticketId {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
+        height: max-content;
 
         .circle {
           border-radius: 50%;
@@ -81,6 +85,15 @@ $white: #fcfcfb;
           background-color: red;
         }
       }
+      .ticketActionButtons {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .closeTicketButton {
+          background-color: transparent;
+          border: none;
+        }
+      }
     }
 
     .resolveBtn {
@@ -100,7 +113,8 @@ $white: #fcfcfb;
   }
 
   .messageContainer {
-    height: 75%;
+    height: 100%;
+    min-height: 250px;
     overflow-y: scroll;
     padding: 0 0.5 * $base-padding;
     background-color: #fff;
@@ -124,7 +138,7 @@ $white: #fcfcfb;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: $light-grey;
+    background-color: $primary-black;
     padding: $base-padding;
 
     .messageContent {
