--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@
 }
 
 *::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.4rem;
+  height: 0.4rem;
 }
+
 *::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: white;
+  box-shadow: inset 0 0 5px 0.1px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
 }
 *::-webkit-scrollbar-thumb {
   background-color: #222222e6;
